--- a/Archive/Base.lproj/Main.storyboard
+++ b/Archive/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3383" y="2875"/>
+            <point key="canvasLocation" x="3063" y="3491"/>
         </scene>
         <!--Reader PageVC-->
         <scene sceneID="CqC-It-uKu">
@@ -209,7 +209,7 @@
                     </connections>
                 </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="3383" y="3527"/>
+            <point key="canvasLocation" x="3063" y="4143"/>
         </scene>
         <!--Search HomeVC-->
         <scene sceneID="Wfj-n6-llJ">
@@ -291,7 +291,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="grz-L9-gzL" userLabel="FavouriteListContainer">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <connections>
-                                    <segue destination="VkW-8I-izw" kind="embed" identifier="favoritesList" id="0Oh-WB-Cr5"/>
+                                    <segue destination="EP4-sJ-4bh" kind="embed" identifier="mainFavouriteList" id="CWG-sp-vAG"/>
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZNO-x7-qIS" userLabel="FavouriteLoginContainer">
@@ -322,6 +322,157 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uWs-OE-Ilo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="160" y="5053"/>
+        </scene>
+        <!--Main Favourite ListVC-->
+        <scene sceneID="pFI-y0-SEo">
+            <objects>
+                <viewController id="EP4-sJ-4bh" customClass="IAMainFavouriteListVC" customModule="Archive" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WTh-Jn-J8z"/>
+                        <viewControllerLayoutGuide type="bottom" id="01q-pK-DP5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4Xa-cd-056">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="edl-hV-u2n">
+                                <rect key="frame" x="240" y="8" width="121" height="29"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentControlValueChanged:" destination="EP4-sJ-4bh" eventType="valueChanged" id="evq-vQ-FoG"/>
+                                </connections>
+                            </segmentedControl>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S1S-eT-wbg" userLabel="FavouriteList Container View">
+                                <rect key="frame" x="20" y="44" width="560" height="548"/>
+                                <connections>
+                                    <segue destination="VkW-8I-izw" kind="embed" identifier="favoritesList" id="cse-EB-TXU"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KWI-wt-viC" userLabel="DownladsListContainer View">
+                                <rect key="frame" x="20" y="44" width="560" height="548"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <segue destination="d6h-Bt-vDf" kind="embed" id="FuL-Xu-xLc"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PMg-zM-Cul" userLabel="BookmarkListContainer View">
+                                <rect key="frame" x="20" y="44" width="560" height="548"/>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="edl-hV-u2n" firstAttribute="centerX" secondItem="4Xa-cd-056" secondAttribute="centerX" id="6ib-KC-kfg"/>
+                            <constraint firstItem="KWI-wt-viC" firstAttribute="top" secondItem="edl-hV-u2n" secondAttribute="bottom" constant="8" id="8ty-u0-kMo"/>
+                            <constraint firstItem="S1S-eT-wbg" firstAttribute="top" secondItem="edl-hV-u2n" secondAttribute="bottom" constant="8" id="Af2-Lm-1bT"/>
+                            <constraint firstItem="01q-pK-DP5" firstAttribute="top" secondItem="S1S-eT-wbg" secondAttribute="bottom" constant="8" symbolic="YES" id="PO6-Gd-XNP"/>
+                            <constraint firstItem="edl-hV-u2n" firstAttribute="top" secondItem="WTh-Jn-J8z" secondAttribute="bottom" constant="8" id="QTI-D1-VrD"/>
+                            <constraint firstItem="S1S-eT-wbg" firstAttribute="leading" secondItem="4Xa-cd-056" secondAttribute="leading" constant="20" symbolic="YES" id="VZp-Pr-g2F"/>
+                            <constraint firstAttribute="trailing" secondItem="S1S-eT-wbg" secondAttribute="trailing" constant="20" symbolic="YES" id="XX0-WI-01W"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="KWI-wt-viC" secondAttribute="leading" id="dH3-Nd-AHR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="KWI-wt-viC" secondAttribute="trailing" id="hWS-k8-EEz"/>
+                            <constraint firstItem="01q-pK-DP5" firstAttribute="top" secondItem="KWI-wt-viC" secondAttribute="bottom" constant="8" symbolic="YES" id="wa3-mb-Zmg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="bookmarkListContainerView" destination="PMg-zM-Cul" id="MsK-Xd-2rk"/>
+                        <outlet property="downloadListContainerView" destination="KWI-wt-viC" id="FXL-di-aOs"/>
+                        <outlet property="favouriteListContainerView" destination="S1S-eT-wbg" id="0Rt-Ih-uK6"/>
+                        <outlet property="segmentControl" destination="edl-hV-u2n" id="c3a-cR-lqc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8eA-t5-Kbs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="843" y="5053"/>
+        </scene>
+        <!--Downloads ListVC-->
+        <scene sceneID="gud-7c-g92">
+            <objects>
+                <collectionViewController id="d6h-Bt-vDf" customClass="IADownloadsListVC" customModule="Archive" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="IC1-AS-7Ay">
+                        <rect key="frame" x="0.0" y="0.0" width="560" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lrg-sr-KUg">
+                            <size key="itemSize" width="128" height="208"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DownloadListCell" id="ksR-I1-vuc" userLabel="DownloadCell" customClass="IADownloadListCollectionViewCell" customModule="Archive" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="omz-ZG-BWH">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="300"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="200" id="u2r-c4-O52">
+                                                    <variation key="widthClass=compact" constant="150"/>
+                                                </constraint>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="u2r-c4-O52"/>
+                                                </mask>
+                                            </variation>
+                                        </imageView>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uCf-Sn-Yjd">
+                                            <rect key="frame" x="0.0" y="250" width="150" height="50"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K3t-KR-tPF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="jNc-aS-mHF"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="0.64606207770000001" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstItem="K3t-KR-tPF" firstAttribute="top" secondItem="uCf-Sn-Yjd" secondAttribute="top" id="0u6-LA-RVF"/>
+                                                <constraint firstItem="K3t-KR-tPF" firstAttribute="leading" secondItem="uCf-Sn-Yjd" secondAttribute="leading" id="B7g-wu-8Pi"/>
+                                                <constraint firstAttribute="trailing" secondItem="K3t-KR-tPF" secondAttribute="trailing" id="VoC-Oe-TjA"/>
+                                                <constraint firstAttribute="height" constant="50" id="hTV-Tj-NfP"/>
+                                                <constraint firstAttribute="bottom" secondItem="K3t-KR-tPF" secondAttribute="bottom" id="ne2-74-MG2"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="omz-ZG-BWH" secondAttribute="bottom" id="6cQ-Ci-YqO"/>
+                                    <constraint firstItem="omz-ZG-BWH" firstAttribute="leading" secondItem="ksR-I1-vuc" secondAttribute="leadingMargin" constant="-8" id="F1U-EN-T5B"/>
+                                    <constraint firstItem="omz-ZG-BWH" firstAttribute="top" secondItem="ksR-I1-vuc" secondAttribute="top" id="Vfl-lD-Whh"/>
+                                    <constraint firstAttribute="bottom" secondItem="uCf-Sn-Yjd" secondAttribute="bottom" id="WKR-dn-SwL"/>
+                                    <constraint firstItem="uCf-Sn-Yjd" firstAttribute="leading" secondItem="ksR-I1-vuc" secondAttribute="leading" id="WM0-bz-eOq"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="omz-ZG-BWH" secondAttribute="trailing" constant="-8" id="dBG-Ek-u7S"/>
+                                    <constraint firstAttribute="trailing" secondItem="uCf-Sn-Yjd" secondAttribute="trailing" id="eXr-0C-r5A"/>
+                                </constraints>
+                                <size key="customSize" width="150" height="300"/>
+                                <connections>
+                                    <outlet property="downloadLabel" destination="K3t-KR-tPF" id="ab5-gZ-f8d"/>
+                                    <outlet property="imageView" destination="omz-ZG-BWH" id="6WF-XB-yZV"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="d6h-Bt-vDf" id="lLl-MX-LgA"/>
+                            <outlet property="delegate" destination="d6h-Bt-vDf" id="0Ok-b6-LoC"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GxV-Al-EIb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1549" y="5250"/>
         </scene>
         <!--Favourite LoginVC-->
         <scene sceneID="Wax-WY-pcY">
@@ -392,7 +543,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iMa-aG-dex" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1028" y="5077"/>
+            <point key="canvasLocation" x="160" y="5757"/>
         </scene>
         <!--Favorites Nav-->
         <scene sceneID="7x2-af-ehw">
@@ -487,7 +638,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="43v-j9-ZhO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4737" y="2883"/>
+            <point key="canvasLocation" x="4417" y="3499"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="857-h6-v8Z">
@@ -505,7 +656,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qsd-mB-Ijk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4073" y="2875"/>
+            <point key="canvasLocation" x="3753" y="3491"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="8YW-ks-FTa">
@@ -826,7 +977,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ibs-W4-NgT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2562" y="2995"/>
+            <point key="canvasLocation" x="2242" y="3611"/>
         </scene>
         <!--Items ListVC-->
         <scene sceneID="Eiv-eh-oKr">
@@ -1155,7 +1306,7 @@
             <objects>
                 <collectionViewController storyboardIdentifier="favouriteListVC" id="VkW-8I-izw" customClass="IAFavouriteListVC" customModule="Archive" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="eqW-Of-ygn">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="560" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="B8h-Tu-a0u">
@@ -1276,7 +1427,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FkT-Cf-aqW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1028" y="4403"/>
+            <point key="canvasLocation" x="1537" y="4377"/>
         </scene>
     </scenes>
     <resources>
@@ -1290,7 +1441,7 @@
         <image name="sort" width="32" height="32"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yM6-r5-4I3"/>
         <segue reference="tge-dc-5FS"/>
+        <segue reference="yM6-r5-4I3"/>
     </inferredMetricsTieBreakers>
 </document>
